# CText

./: CMakeLists.txt
Apps/: CText.vcxproj  UnitTests.cpp
Apps/Demos/CollectSentences/: CollectSentences.cpp  CollectSentences.vcxproj
Apps/Demos/CollectSentences/x64/Debug/: CollectSentences.exe.recipe  vc142.idb
Apps/Demos/CollectSentences/x64/Debug/CollectSentences.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Apps/Demos/HighlightWords/: HighlightWords.cpp  HighlightWords.vcxproj
Apps/Demos/HighlightWords/x64/Debug/: HighlightWords.exe.recipe  vc142.idb
Apps/Demos/HighlightWords/x64/Debug/HighlightWords.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Apps/Demos/PaddRightLines/: PaddLines.cpp  PaddRightLines.vcxproj
Apps/Demos/PaddRightLines/x64/Debug/: PaddRightLines.exe.recipe  vc142.idb
Apps/Demos/PaddRightLines/x64/Debug/PaddRightLines.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PaddRightLines.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Apps/Demos/SortLines/: SortLines.cpp  SortLines.vcxproj
Apps/Demos/SortLines/x64/Debug/: SortLines.exe.recipe  vc142.idb
Apps/Demos/SortLines/x64/Debug/SortLines.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Apps/Demos/TrimLines/: TrimLines.cpp  TrimLines.vcxproj
Apps/Demos/TrimLines/x64/Debug/: TrimLines.exe.recipe  vc142.idb
Apps/Demos/TrimLines/x64/Debug/TrimLines.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Apps/Demos/WordFrequencies/: WordFrequencies.cpp  WordFrequencies.vcxproj
Apps/Demos/WordFrequencies/x64/Debug/: WordFrequencies.exe.recipe  vc142.idb
Apps/Demos/WordFrequencies/x64/Debug/WordFrequencies.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Apps/x64/Debug/: UnitTests.exe.recipe  vc142.idb
Apps/x64/Debug/UnitTests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CText/: CTextT.h  CTextT.inl
Demos/CollectSentences/: CMakeLists.txt  CollectSentences.cpp
Demos/HighlightWords/: CMakeLists.txt  HighlightWords.cpp
Demos/PaddRightLines/: CMakeLists.txt  PaddLines.cpp
Demos/SortLines/: CMakeLists.txt  SortLines.cpp
Demos/TrimLines/: CMakeLists.txt  TrimLines.cpp
Demos/WordFrequencies/: CMakeLists.txt  WordFrequencies.cpp
Tests/: Main.cpp  UnitTests.cpp
